--- a/src/components/GlobalHeader.astro
+++ b/src/components/GlobalHeader.astro
@@ -85,6 +85,9 @@ const navLinks = [
 
 <style>
   .global-header {
+    position: sticky;
+    top: 0;
+    z-index: 100;
     padding: calc(var(--ids__density) * 0.5em) 0;
     border-bottom: 1px solid rgba(var(--ids__text-RGB), 0.1);
     background: rgb(var(--ids__background-RGB));
