--- a/src/components/catalog/ToolGrid.astro
+++ b/src/components/catalog/ToolGrid.astro
@@ -22,9 +22,9 @@ const { tools, columns = 'M' } = Astro.props;
         coverImage={tool.coverImage}
         gifPreview={tool.gifPreview}
         priceModel={tool.priceModel}
+        priceFrom={tool.priceFrom}
         tags={tool.tags}
         isNsfw={tool.isNsfw}
-        affiliateLink={tool.affiliateLink}
       />
     </SequenceItem>
   ))}
