--- a/src/components/blog/BlogCard.astro
+++ b/src/components/blog/BlogCard.astro
@@ -11,19 +11,7 @@ interface Props {
 }
 
 const { post } = Astro.props;
-const { title, description, publishedAt, coverImage, author } = post.data;
-
-// Форматирование даты
-const formattedDate = publishedAt.toLocaleDateString('ru-RU', {
-  year: 'numeric',
-  month: 'long',
-  day: 'numeric'
-});
-
-// Создаём excerpt из description
-const excerpt = description.length > 150 
-  ? description.slice(0, 150) + '...' 
-  : description;
+const { title, coverImage } = post.data;
 ---
 
 <article class="blog-card">
@@ -40,12 +28,7 @@ const excerpt = description.length > 150
     )}
     
     <div class="blog-card__content">
-      <time class="blog-card__date" datetime={publishedAt.toISOString()}>
-        {formattedDate}
-      </time>
       <h3 class="blog-card__title">{title}</h3>
-      <p class="blog-card__excerpt">{excerpt}</p>
-      {author && <span class="blog-card__author">{author}</span>}
     </div>
   </a>
 </article>
@@ -84,35 +67,15 @@ const excerpt = description.length > 150
     flex-direction: column;
   }
 
-  .blog-card__date {
-    font-size: 0.85em;
-    opacity: 0.6;
-    margin-bottom: 0.3em;
-  }
-
   .blog-card__title {
     font-size: 1.2em;
     font-weight: 600;
-    margin: 0 0 0.5em;
+    margin: 0;
     line-height: 1.3;
     transition: color 0.2s ease;
   }
 
   .blog-card:hover .blog-card__title {
     color: rgb(var(--ids__link-RGB));
-  }
-
-  .blog-card__excerpt {
-    font-size: 0.95em;
-    line-height: 1.5;
-    opacity: 0.8;
-    margin: 0 0 0.5em;
-    flex: 1;
-  }
-
-  .blog-card__author {
-    font-size: 0.85em;
-    opacity: 0.6;
-    margin-top: auto;
   }
 </style>
