--- a/src/components/blog/BlogCard.astro
+++ b/src/components/blog/BlogCard.astro
@@ -102,6 +102,6 @@ const { title, coverImage } = post.data;
   }
 
   .blog-card:hover .blog-card__title {
-    color: rgb(var(--ids__link-RGB));
+    color: rgb(var(--ids__hover-RGB));
   }
 </style>
