--- a/src/components/catalog/TagFilter.astro
+++ b/src/components/catalog/TagFilter.astro
@@ -88,8 +88,8 @@ const categoryLabels: Record<Tag['category'], string> = {
   }
 
   .tag-filter__tag--active:hover {
-    background: rgb(var(--ids__hover-RGB));
-    border-color: rgb(var(--ids__hover-RGB));
+    background: rgb(var(--ids__link-RGB));
+    border-color: rgb(var(--ids__link-RGB));
   }
 
   .tag-filter__clear {
