--- a/src/components/catalog/ToolCard.astro
+++ b/src/components/catalog/ToolCard.astro
@@ -71,6 +71,10 @@ const primaryCategory = tags.find(t => ['chatbot', 'image-gen', 'telegram-bot', 
     flex: 1;
   }
 
+  .tool-card__link:hover {
+    color: inherit;
+  }
+
   .tool-card__image-wrapper {
     position: relative;
     aspect-ratio: 16 / 10;
@@ -112,13 +116,17 @@ const primaryCategory = tags.find(t => ['chatbot', 'image-gen', 'telegram-bot', 
   }
 
   .tool-card:hover .tool-card__title {
-    color: rgb(var(--ids__link-RGB));
+    color: rgb(var(--ids__hover-RGB));
   }
 
   .tool-card__price {
     display: block;
     font-size: 0.95em;
     opacity: 0.7;
+  }
+
+  .tool-card__link:hover .tool-card__price {
+    color: inherit !important;
   }
 </style>
 
