--- a/src/components/landing/CategoryCards.astro
+++ b/src/components/landing/CategoryCards.astro
@@ -56,6 +56,6 @@ const tools: ToolData[] = toolsCollection.map(entry => ({
 
 <style>
   .category-cards__title {
-    text-align: center;
+    text-align: left;
   }
 </style>
