--- a/src/styles/layout.css
+++ b/src/styles/layout.css
@@ -61,6 +61,7 @@
 .ids__sequence {
   display: flex;
   flex-wrap: wrap;
+  align-items: stretch;
   margin-bottom: calc(var(--ids__density) * 0.4em);
   --gap: 0em;
   gap: var(--gap);
